# SAM3_LoRA

./: CHANGES_SUMMARY.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  ENHANCED_TRAINING_GUIDE.md  INFERENCE.md  INTEGRATION_GUIDE.md  PROFILING.md  QUICKSTART.md  QUICK_REFERENCE.md  README_ENHANCED.md  SETUP.md  TRAINING.md  batch_inference.py  config_examples.py  evaluate_model.py  inference_enhanced.py  pyproject.toml  requirements-dev.txt  setup.sh  setup_poetry.sh  train_enhanced.py
configs/: basic_lora_config.yaml  enhanced_training_template.yaml  fast_finetune_config.yaml  large_scale_config.yaml  medical_config.yaml
examples/: enhanced_training_example.py
sam3/train/data/: coco_json_loaders.py
sam3/train/utils/: class_imbalance.py  enhanced_config.py  per_iteration_validation.py  trainer_enhancer.py  visualization.py
src/utils/: __init__.py  logging_utils.py  profiling_utils.py
