[tool.poetry]
name = "sam3-lora"
version = "0.1.0"
description = "Standalone LoRA fine-tuning for SAM3 (Segment Anything Model 3)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/yourusername/sam3_lora"
keywords = ["segmentation", "lora", "fine-tuning", "sam", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=2.7.0"
torchvision = ">=0.19.0"
transformers = ">=4.48.0"
huggingface-hub = ">=0.26.0"
Pillow = ">=10.0.0"
numpy = ">=1.24.0"
opencv-python = ">=4.8.0"
PyYAML = ">=6.0"
tqdm = ">=4.65.0"
matplotlib = ">=3.7.0"
scipy = ">=1.10.0"
pycocotools = ">=2.0.6"
pandas = ">=1.5.0"
scikit-image = ">=0.21.0"
scikit-learn = ">=1.3.0"
hydra-core = ">=1.3.0"
omegaconf = ">=2.3.0"
submitit = ">=1.4.0"
iopath = ">=0.1.10"
decord = ">=0.6.0"
einops = ">=0.6.0"
open-clip-torch = ">=2.20.0"
openai = ">=1.0.0"
ftfy = ">=6.1.0"
regex = ">=2023.0.0"
psutil = ">=5.9.0"
torchmetrics = ">=1.0.0"
typing-extensions = ">=4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
isort = ">=5.12.0"
mypy = ">=1.0.0"
pylint = ">=2.16.0"
jupyter = ">=1.0.0"
ipython = ">=8.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.0.0"
sphinx-rtd-theme = ">=1.0.0"
sphinx-autodoc-typehints = ">=1.19.0"

[tool.poetry.scripts]
# Optional: command-line scripts
# sam3-train = "train_enhanced:main"
# sam3-infer = "inference_enhanced:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=html"
